@@ -13,7 +13,6 @@ import org.slf4j.LoggerFactory;
 
 import java.util.*;
 import java.util.concurrent.atomic.AtomicInteger;
-import java.util.stream.Collectors;
 
 /**
  * @author Geoffroy Jamgotchian {@literal <geoffroy.jamgotchian at rte-france.com>}
@@ -23,10 +22,10 @@ public class EquationSystemIndex<V extends Enum<V> & Quantity, E extends Enum<E>
 
     private static final Logger LOGGER = LoggerFactory.getLogger(EquationSystemIndex.class);
 
-    private final Set<Equation<V, E>> equationsToSolve = new HashSet<>();
+    private final Set<Equation<V, E>> sortedSetEquationsToSolve = new TreeSet<>();
 
     // variable reference counting in equation terms
-    private final Map<Variable<V>, MutableInt> variablesToFindRefCount = new HashMap<>();
+    private final Map<Variable<V>, MutableInt> sortedMapVariablesToFindRefCount = new TreeMap<>();
 
     private List<Equation<V, E>> sortedEquationsToSolve = Collections.emptyList();
 
@@ -63,8 +62,8 @@ public class EquationSystemIndex<V extends Enum<V> & Quantity, E extends Enum<E>
     }
 
     private void updateEquationsToSolve(Comparator<Equation<V, E>> comparator) {
-        sortedEquationsToSolve = comparator == null ? equationsToSolve.stream().sorted().collect(Collectors.toList())
-                : equationsToSolve.stream().sorted(comparator).collect(Collectors.toList());
+        sortedEquationsToSolve = comparator == null ? sortedSetEquationsToSolve.stream().toList()
+                : sortedSetEquationsToSolve.stream().sorted(comparator).toList();
         AtomicInteger columnCount = new AtomicInteger();
         for (Equation<V, E> equation : sortedEquationsToSolve) {
             equation.setColumn(columnCount.getAndAdd(1));
@@ -74,8 +73,8 @@ public class EquationSystemIndex<V extends Enum<V> & Quantity, E extends Enum<E>
     }
 
     private void updateVariablesToFind(Comparator<Variable<V>> comparator) {
-        sortedVariablesToFind = comparator == null ? variablesToFindRefCount.keySet().stream().sorted().collect(Collectors.toList())
-                : variablesToFindRefCount.keySet().stream().sorted(comparator).collect(Collectors.toList());
+        sortedVariablesToFind = comparator == null ? sortedMapVariablesToFindRefCount.keySet().stream().toList()
+                : sortedMapVariablesToFindRefCount.keySet().stream().sorted(comparator).toList();
         AtomicInteger rowCount = new AtomicInteger();
         for (Variable<V> variable : sortedVariablesToFind) {
             variable.setRow(rowCount.getAndAdd(1));
@@ -104,10 +103,10 @@ public class EquationSystemIndex<V extends Enum<V> & Quantity, E extends Enum<E>
     private void addTerm(EquationTerm<V, E> term) {
         notifyEquationTermChange(term);
         for (Variable<V> variable : term.getVariables()) {
-            MutableInt variableRefCount = variablesToFindRefCount.get(variable);
+            MutableInt variableRefCount = sortedMapVariablesToFindRefCount.get(variable);
             if (variableRefCount == null) {
                 variableRefCount = new MutableInt(1);
-                variablesToFindRefCount.put(variable, variableRefCount);
+                sortedMapVariablesToFindRefCount.put(variable, variableRefCount);
                 variablesIndexValid = false;
                 notifyVariableChange(variable, EquationSystemIndexListener.ChangeType.ADDED);
             } else {
@@ -117,7 +116,7 @@ public class EquationSystemIndex<V extends Enum<V> & Quantity, E extends Enum<E>
     }
 
     private void addEquation(Equation<V, E> equation) {
-        equationsToSolve.add(equation);
+        sortedSetEquationsToSolve.add(equation);
         equationsIndexValid = false;
         for (EquationTerm<V, E> term : equation.getTerms()) {
             if (term.isActive()) {
@@ -130,12 +129,12 @@ public class EquationSystemIndex<V extends Enum<V> & Quantity, E extends Enum<E>
     private void removeTerm(EquationTerm<V, E> term) {
         notifyEquationTermChange(term);
         for (Variable<V> variable : term.getVariables()) {
-            MutableInt variableRefCount = variablesToFindRefCount.get(variable);
+            MutableInt variableRefCount = sortedMapVariablesToFindRefCount.get(variable);
             if (variableRefCount != null) {
                 variableRefCount.decrement();
                 if (variableRefCount.intValue() == 0) {
                     variable.setRow(-1);
-                    variablesToFindRefCount.remove(variable);
+                    sortedMapVariablesToFindRefCount.remove(variable);
                     variablesIndexValid = false;
                     notifyVariableChange(variable, EquationSystemIndexListener.ChangeType.REMOVED);
                 }
@@ -145,7 +144,7 @@ public class EquationSystemIndex<V extends Enum<V> & Quantity, E extends Enum<E>
 
     private void removeEquation(Equation<V, E> equation) {
         equation.setColumn(-1);
-        equationsToSolve.remove(equation);
+        sortedSetEquationsToSolve.remove(equation);
         equationsIndexValid = false;
         for (EquationTerm<V, E> term : equation.getTerms()) {
             if (term.isActive()) {
